

		CHANGES in `multcomp' VERSION 1.1-1

    o    better handling of model.frames in `cld'


		CHANGES in `multcomp' VERSION 1.1-0

    o    new compact letter displays

    o    force binary mode when downloading SPSS data files


		CHANGES in `multcomp' VERSION 1.0-8

    o    new vignette containing supplementary material
         for a letter on Pollet \& Nettle (2009, 
         Evolution and Human Behavior)

    o    references updated


		CHANGES in `multcomp' VERSION 1.0-7

    o    new default for missing linfct: inference over
         all parameters as given by coef(model)

    o    new function cftest, similar to lmtest:::coeftest


		CHANGES in `multcomp' VERSION 1.0-6

    o    better names for p-values (feature request by Achim Zeileis)


		CHANGES in `multcomp' VERSION 1.0-5

    o    update vignette


		CHANGES in `multcomp' VERSION 1.0-4

    o    fix Rd problems


		CHANGES in `multcomp' VERSION 1.0-3

    o    use isSymmetric(vcov, tol = sqrt(.Machine$double.eps)
         to check for symmetry of covariance matrices in `parm'
         (suggested by Fritz)

    o    better error messages suggested by Rich


		CHANGES in `multcomp' VERSION 1.0-2

    o    use new model.matrix / model.frame methods for class mer in
         lme4 (>= 0.999375-16)


		CHANGES in `multcomp' VERSION 1.0-1

    o    make sure more than 2 groups are present in contrMat()

    o    check if `model' is an S4 object before trying to extract its
         `call' slot

    o    better warning when df.residual fails


		CHANGES in `multcomp' VERSION 1.0-0

    o    unify both vignettes

    o    mcp() doesn't try to take care of interaction terms anymore


		CHANGES in `multcomp' VERSION 0.993-3

    o    new `parm' function for specifying model parameters estimated
         elsewhere

    o    improve print method for confidence intervals

    o    new adjustment method `free' (for free combinations)


		CHANGES in `multcomp' VERSION 0.993-2
