@@ -1,7 +1,7 @@
 Package: multcomp
 Title: Simultaneous Inference in General Parametric Models
-Version: 1.1-1
-Date: 2009-06-08
+Version: 1.1-2
+Date: 2009-09-08
 Author: Torsten Hothorn, Frank Bretz and Peter Westfall with
   contributions by Richard M. Heiberger and Andre Schuetzenmeister
 Description: Simultaneous tests and confidence intervals
