@@ -1,5 +1,12 @@
 
 
+		CHANGES in `multcomp' VERSION 1.1-2
+
+     o   mcp may average over interaction and covariates (Experimental!)
+
+     o   ylim argument to plot
+
+
 		CHANGES in `multcomp' VERSION 1.1-1
 
     o    better handling of model.frames in `cld'
